--- a/outputs/paper/restaurant_references.bib
+++ b/outputs/paper/restaurant_references.bib
@@ -7,6 +7,14 @@
     url = {https://www.R-project.org/},
   }
 
+@Misc{float,
+    title = {{float}: 32-Bit Floats},
+    author = {Drew Schmidt},
+    year = {2020},
+    note = {{R} package version 0.2-4},
+    url = {https://cran.r-project.org/package=float},
+  }
+
 @Manual{gridExtra,
     title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
     author = {Baptiste Auguie},
